# PandoraLauncherWebsite

./: Cargo.toml  index.html
.github/workflows/: publish.yml
src/: main.rs
src/routes/: home.rs  mod.rs
src/services/: request.rs
src/static/: index.scss
src/static/bulma/css/: bulma-rtl.css
